added search for vacancy [skip ci]
